# cfgv

./: .pre-commit-config.yaml  README.md  azure-pipelines.yml  cfgv.py  setup.cfg  setup.py  tox.ini
tests/: cfgv_test.py
