[metadata]
name = cfgv
version = 3.4.0
description = Validate configuration and produce human readable error messages.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/cfgv
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
py_modules = cfgv
python_requires = >=3.9

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults
